# AgentScout

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_pipeline_runs.py  cc6846487867_create_posts_analysis_comments_tables.py
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  critic.py  debate.py  judge.py  post_analysis.py  query_generator.py  writer.py
backend/app/agents/prompts/: critic.py  judge.py  post_analysis.py  query_generator.py  writer.py
backend/app/api/routes/: comments.py  health.py  pipeline.py  posts.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/db/: session.py
backend/app/integrations/: __init__.py
backend/app/integrations/ai_models/: __init__.py  base.py  factory.py  openai_client.py
backend/app/integrations/apify/: __init__.py  client.py
backend/app/models/: __init__.py  comment_candidate.py  mixins.py  pipeline_run.py  post.py  post_analysis.py
backend/app/schemas/: __init__.py  comment_candidate.py  pipeline.py  post.py  post_analysis.py
backend/app/services/: persistence.py  pipeline.py
backend/app/services/scraping/: __init__.py  base.py  models.py  registry.py  service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  types.ts
frontend/src/components/: Layout.tsx  ui.tsx
frontend/src/pages/: DashboardPage.tsx  PostsPage.tsx  (+4 more)
